New year update. Adding probability displaying

--- a/src/components/Home/Auth/styles.module.scss
+++ b/src/components/Home/Auth/styles.module.scss
@@ -50,7 +50,7 @@
     }
 
     .authAlert {
-        color: #b10707;
+        color: $error-color;
         text-align: center;
         width: 80%;
         font-weight: 600;
