--- a/src/main.scss
+++ b/src/main.scss
@@ -1,8 +1,13 @@
-$button-bg: #0d4c57;
-$button-bg_disabled: #40838d;
-$button-bg_hover: #0e3238;
-
+// $button-bg: #0d4c57;
+// $button-bg_disabled: #40838d;
+// $button-bg_hover: #0e3238;
+// $error-color: #b10707;
 $glass-bg: #FFFFFF20;
+
+$error-color: #4d0000;
+$button-bg: #420909;
+$button-bg_disabled: #664545;
+$button-bg_hover: #360606;
 
 .button {
     border: 0;
