--- a/src/components/Room/BidBlock/styles.module.scss
+++ b/src/components/Room/BidBlock/styles.module.scss
@@ -1,6 +1,9 @@
 @import '../../../main';
 
 .gameBlock {
+    position: relative;
+    z-index: 10;
+
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -10,7 +13,7 @@
     max-height: calc(100dvh - 10rem);
     overflow-y: auto;
     margin: 0 auto;
-    padding: 2rem;
+    padding: 1rem 2rem;
 
     border-radius: 0.5rem;
 
@@ -27,6 +30,7 @@
     display: flex;
     font-weight: 600;
     align-items: center;
+    margin-top: 0;
 
     strong {
         font-size: 2rem;
@@ -91,6 +95,10 @@
             font-size: 1.25rem;
         }
     }
+
+    &probs {
+        margin: 1rem 0 0;
+    }
 }
 
 @media screen and (max-width: 1400px) {
@@ -127,6 +135,10 @@
     
         &btns {
             width: 90%;
+        }
+
+        &probs {
+            font-size: 1.25rem;
         }
     }
 }
@@ -233,6 +245,10 @@
                     margin-top: 1rem;
                 }
             }
+        }
+
+        &probs {
+            font-size: 1rem;
         }
     }
 }
