--- a/src/index.scss
+++ b/src/index.scss
@@ -1,10 +1,19 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
+@import './main.scss';
 
 body {
+  @extend .scrollbar;
   margin: 0;
   font-family: "Montserrat", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
+  overflow-x: hidden;
+
+  &::-webkit-scrollbar {
+    background-color: #239e6e;
+    width: 0.75rem;
+  }
 }
 
 code {
