Moving png;base64 to files

--- a/src/main.scss
+++ b/src/main.scss
@@ -59,3 +59,7 @@ $button-bg_hover: #360606;
         border-radius: 0.5rem;
     }
 }
+
+.snow {
+    background-image: url(../public/assets/snow/snow.jpeg), url(../public/assets/snow/snow_2.jpeg), url(../public/assets/snow/snow_3.jpeg);
+}
